--- a/Pages/Index.html
+++ b/Pages/Index.html
@@ -1,59 +1,89 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
+    <link href="../Style/style.css" rel="stylesheet" />
+    <title>Lava Jato</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  <link href="../Style/style.css" rel="stylesheet">
-  <title>Lava Jato</title>
-</head>
+  <script>
+    function logout() {
+      debugger;
+      localStorage.removeItem("Auth");
+    }
+  </script>
 
-<script>
-  function logout() {
-    debugger;
-    localStorage.removeItem("Auth");
-  }
-</script>
-
-<body>
-  <nav class="navbar navbar-expand-lg " id="Nav">
-    <div class="container-fluid">
-      <a class="navbar-brand" id="Link" href="../Pages/Index.html"><img src="../Assets/logo1.png" alt=""
-          id="imgLogo"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav" id="NavLink">
-          <a class="nav-link active" id="Link" aria-current="page" href="Index.html">Home</a>
-          <a class="nav-link active" id="Link" href="Servico.html">Serviços</a>
-          <a class="nav-link active" id="Link" href="#faleconosco">Fale Conosco</a>
+  <body>
+    <nav class="navbar navbar-expand-lg" id="Nav">
+      <div class="container-fluid">
+        <a class="navbar-brand" id="Link" href="../Pages/Index.html"
+          ><img src="../Assets/logo1.png" alt="" id="imgLogo"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav" id="NavLink">
+            <a
+              class="nav-link active"
+              id="Link"
+              aria-current="page"
+              href="Index.html"
+              >Home</a
+            >
+            <a class="nav-link active" id="Link" href="Servico.html"
+              >Serviços</a
+            >
+            <a class="nav-link active" id="Link" href="#faleconosco"
+              >Fale Conosco</a
+            >
+          </div>
+          <a class="navbar-brand" id="Link" href="../Pages/Login.html"
+            ><img src="../Assets/login.png" alt="Login" id="imgLogin"
+          /></a>
+          <!-- <a class="navbar-brand-logout" id="Link" onclick="logout()">Logout</a> -->
         </div>
-        <a class="navbar-brand" id="Link" href="../Pages/Login.html"><img src="../Assets/login.png" alt="Login"
-            id="imgLogin"></a>
-        <!-- <a class="navbar-brand-logout" id="Link" onclick="logout()">Logout</a> -->
+      </div>
+    </nav>
+    <img src="../Assets/Banner2.png" alt="" id="Banner" />
+    <img src="../Assets/nome.png" alt="" id="Nome" />
+    <div class="conteudo">
+      <img src="../Assets/Lava-jato1.png" alt="" id="imgLavaJato" />
+      <h2 id="Title1">
+        Lavagem e Limpeza <br />
+        Profissional de Seu Veículo
+      </h2>
+
+      <div id="Conteudo">
+        <p>
+          Os serviços de limpeza para seu carro ou moto ficou ainda mais fácil!
+          <br />
+          Com alguns cliques você agenda um serviço para seu veículo, com <br />
+          horário agendado você evita filas e consegue se planejar melhor.
+        </p>
+        <p>
+          No site você pode agendar serviços de limpeza ou estética para o
+          <br />
+          seu veículo de forma simplificada.
+        </p>
       </div>
     </div>
-  </nav>
-  <img src="../Assets/Banner2.png" alt="" id="Banner">
-  <img src="../Assets/nome.png" alt="" id="Nome">
-  <div class="conteudo">
-    <img src="../Assets/Lava-jato1.jpeg" alt="" id="imgLavaJato">
-    <h2 id="Title1">Lavagem e Limpeza <br>
-      Profissional de Seu Veículo</h2>
-
-    <div id="Conteudo">
-      <p>Os serviços de limpeza para seu carro ou moto ficou ainda mais fácil! <br>
-        Com alguns cliques você agenda um serviço para seu veículo, com <br>
-        horário agendado você evita filas e consegue se planejar melhor.</p>
-      <p>No site você pode agendar serviços de limpeza ou estética para o <br>
-        seu veículo de forma simplificada.
-    </div>
-  </div>
-  <!-- <div class="Service">
+    <!-- <div class="Service">
     <h2 id="Title2">Agende já seu Serviço</h2>
     <br>
     <br>
@@ -83,7 +113,7 @@
         </div>
         <div class="col">
           <div class="card" style="width: 18rem;">
-            <img src="../Assets/i5.jpg" class="card-img-top" alt="...">
+            <img src="../Assets/i5.png" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Polimento de Pintura</h5>
               <p class="card-text">Processo estético empregado no veículo. A tinta danificada é removida para ser
@@ -124,7 +154,7 @@
       </div>
       <div class="col">
         <div class="card" style="width: 18rem;">
-          <img src="../Assets/i8.jpeg" class="card-img-top" alt="...">
+          <img src="../Assets/i8.png" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Polimento de Faróis</h5>
             <p class="card-text">É um processo de limpeza das luzes dianteiras do veículo, busca revitalizar os faróis
@@ -139,50 +169,69 @@
   </div>
   </div> -->
 
-  <br>
-  <br><br><br><br><br> <br> <br> <br>
-  <footer class="Footer">
-
-    <br>
-    <form action="https://formspree.io/f/xvojlpak" method="POST">
-      <a href="" name="faleconosco"></a>
-      <h2 id="Title3">Fale Conosco</h2>
-      <br>
-      <div class="card" style="width: 30rem;" id="card-Footer">
-        <div class="card-body">
-          <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Email</label>
-            <input type="email" class="form-control" name="email" id="Input" placeholder="seuemail@gmail.com">
+    <br />
+    <br /><br /><br /><br /><br />
+    <br />
+    <br />
+    <br />
+    <footer class="Footer">
+      <br />
+      <form action="https://formspree.io/f/xvojlpak" method="POST">
+        <a href="" name="faleconosco"></a>
+        <h2 id="Title3">Fale Conosco</h2>
+        <br />
+        <div class="card" style="width: 30rem" id="card-Footer">
+          <div class="card-body">
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label"
+                >Email</label
+              >
+              <input
+                type="email"
+                class="form-control"
+                name="email"
+                id="Input"
+                placeholder="seuemail@gmail.com"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="exampleFormControlTextarea1" class="form-label"
+                >Mensagem</label
+              >
+              <textarea
+                class="form-control"
+                id="exampleFormControlTextarea1"
+                name="message"
+                rows="3"
+              ></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary" id="btnCard">
+              Enviar
+            </button>
           </div>
-          <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Mensagem</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" name="message" rows="3"></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary" id="btnCard">Enviar</button>
         </div>
+      </form>
+
+      <img src="../Assets/LG.png" id="imgFooter" alt="" />
+      <div id="icons">
+        <img src="../Assets/telefone.png" class="icon" id="iconTel" alt="" />
+        <h5 class="textFooter" id="textTel">(79) 99934-3456</h5>
+        <br />
+        <img src="../Assets/email.png" class="icon" id="iconEmail" alt="" />
+        <h5 class="textFooter" id="textEmail">masterclean@gmail.com</h5>
+        <br />
+        <img src="../Assets/instagram.png" class="icon" id="iconInsta" alt="" />
+        <h5 class="textFooter" id="textInsta">@masterclean</h5>
       </div>
-    </form>
-
-    <img src="../Assets/LG.png" id="imgFooter" alt="">
-    <div id="icons">
-      <img src="../Assets/telefone.png" class="icon" id="iconTel" alt="">
-      <h5 class="textFooter" id="textTel">(79) 99934-3456</h5>
-      <br>
-      <img src="../Assets/email.png" class="icon" id="iconEmail" alt="">
-      <h5 class="textFooter" id="textEmail">masterclean@gmail.com</h5>
-      <br>
-      <img src="../Assets/instagram.png" class="icon" id="iconInsta" alt="">
-      <h5 class="textFooter" id="textInsta">@masterclean</h5>
-    </div>
-    <br>
-    <br>
-    <br>
-  </footer>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-    crossorigin="anonymous"></script>
-  <script src="/js/servicos.js"></script>
-
-</body>
-
+      <br />
+      <br />
+      <br />
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
+    <script src="/js/servicos.js"></script>
+  </body>
 </html>
